src/modules/70-pipeline/components/AbstractNode/Nodes/CreateNode/CreateNode.module.scss
.createNode {
  cursor: pointer;
  height: 40px;
  width: 90px;
  display: block;

  .createNew {
    &:hover {
      box-shadow: 0px 8px 16px 0px #60617029;
    }
    border: 2px dashed var(--grey-400) !important;

    &.selected {
      border-color: var(--primary-7) !important;
    }

    &.disabled {
      background-color: var(--grey-200);
      cursor: not-allowed;
    }
  }

  [data-name*='node-name'] {
    word-break: break-word;
  }
}

.steps {
  width: 90px;
  height: 40px;
}

